# cfightlog

./: CMakeLists.txt  README.md
include/: com.h  curl.h  sendMgr.h
source/: cfg.cpp  handleTrd.cpp  main.cpp  sendMgr.cpp  sendTrd.cpp
